[package]
name = "parser"
version = "0.1.0"
authors = ["theseusyang <theseus.yang@timesgraph.io>"]
edition = "2022"
publish = false

[dependencies]
query_ast = { path = "../ast" }
query_response = { path = "../response" }

postgres-parser = "0.2"
log = "0.4.14"

[dev-dependencies]
rstest = "0.10.0"
